# SoftDev

./: README.md
Dev/dev1/: makefile  makefile.save
Dev/dev2/: README.txt  project.tgz
Dev/dev2/project/: Makefile.am  configure.ac
Dev/dev2/project/src/lib_foo/: Makefile.am
Dev/dev2/project/src/main/: Makefile.am
Dev/dev3/: solution.py  test
Python/python1/: ex1.py
Python/python2/: .python2.py.swp  SECRET  python2.py
Python/python3/: python3.py
Shell/shell1/: shell_1
Shell/shell2/: README.txt  shell_2
Shell/shell3/: shell_3.sh
